Alterada cor do hover do botão

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
-    --botao-azul-efeito: #3c84db; 
+    --botao-azul-efeito: #3dbbf5; 
 }
 
 body {
